src/test/resources/frontendReference/invalid/semanticErr/class/simple/mismatchedClasses.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 23:2 -- Incompatible type at 'class1'. Expected type: CLASS d. Actual type: CLASS c.
Semantic Error at 25:2 -- Incompatible type at 'class1' for assignment. Expected type: CLASS d. Actual type: CLASS c.